--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,79 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background: #272727;
+  font-family: "Montserrat", sans-serif;
+}
+
+.navMenu {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.Lnk {
+  color: #f6f4e6;
+  text-decoration: none;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  font-weight: 500;
+  display: inline-block;
+  width: 150px;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.homeCon {
+  color: #81dfff;
+  font-size: 1.2em;
+  font-weight: 200;
+  
+  margin-top: 200px;
+  text-align: center;
+  
+}
+.formStyle {
+  color: #81dfff;
+    font-size: 1.2em;
+    font-weight: 200;
+    margin-top: 200px;
+    text-align: center;
+}
+.Label {
+  width: 100%;
+  display: block;
+  padding-top: 100px;
+  padding-bottom: 10px;
+}
+#title {
+  width: 33%;
+  height: 33px;
+  background-color:#272727
+}
+#desc {
+  width: 90%;
+  height: 200px;
+}
+textarea {
+  resize: none;
+  background-color: #272727;
+  color: #81dfff;
+  border: solid;
+  border-color: aqua;
+  border-width: 0.1px;
+}
+input {
+  color: #81dfff;
+    border: solid;
+    border-color: aqua;
+    border-width: 0.1px;
 }
