--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ body {
   
 }
 .formStyle {
-  color: #81dfff;
+  color: #f6f4e6;
     font-size: 1.2em;
     font-weight: 200;
     margin-top: 200px;
@@ -70,10 +70,13 @@ textarea {
   border: solid;
   border-color: aqua;
   border-width: 0.1px;
+  border-radius: 15px;
 }
 input {
   color: #81dfff;
     border: solid;
-    border-color: aqua;
+    border-color: rgb(176, 230, 230);
     border-width: 0.1px;
+    border-radius: 15px;
+    text-align:center;
 }
